YUK-20601 : Alignment issues due to max field length in drop down list

--- a/yukon-client/yukon-web/src/com/cannontech/web/common/resources/yukon.less
+++ b/yukon-client/yukon-web/src/com/cannontech/web/common/resources/yukon.less
@@ -1992,6 +1992,8 @@ table th, .title-header, .column-header {
 }
 .trend-container .glass{height: 100%;width: 100%;z-index: 1000;}
 
+.pao-name-width { width : 223px; }
+
 #legend {
     text-align:center;
     border:1px solid #ccc;
